# TextEditor

./: .gitignore.txt  CMakeLists.txt  NamesOfSavedFiles.txt  TextEditorController.cpp  TextEditorController.h  TextEditorModel.cpp  TextEditorModel.h  TextEditorRender.cpp  TextEditorRender.h  main.cpp
ChangeSymbolMenu/: ChangeSymbolController.cpp  ChangeSymbolController.h  ChangeSymbolModel.cpp  ChangeSymbolModel.h  ChangeSymbolRender.cpp  ChangeSymbolRender.h
CollapseBrackets/: CollapseBracketsController.cpp  CollapseBracketsController.h  CollapseBracketsModel.cpp  CollapseBracketsModel.h  CollapseBracketsRender.cpp  CollapseBracketsRender.h
CommandsMenu/: CommandsMenuController.cpp  CommandsMenuController.h  CommandsMenuModel.cpp  CommandsMenuModel.h  CommandsMenuRender.cpp  CommandsMenuRender.h
ContextualReplacementMenu/: ContextualReplacementController.cpp  ContextualReplacementController.h  ContextualReplacementModel.cpp  ContextualReplacementModel.h  ContextualReplacementRender.cpp  ContextualReplacementRender.h
EraseLineMenu/: EraseLineMenuController.cpp  EraseLineMenuController.h  EraseLineMenuModel.cpp  EraseLineMenuModel.h  EraseLineMenuRender.cpp  EraseLineMenuRender.h
EraseStarsMenu/: EraseStarsMenuController.cpp  EraseStarsMenuController.h  EraseStarsMenuModel.cpp  EraseStarsMenuModel.h  EraseStarsMenuRender.cpp  EraseStarsMenuRender.h
EraseZeroes/: EraseZeroesController.cpp  EraseZeroesController.h  EraseZeroesModel.cpp  EraseZeroesModel.h  EraseZeroesRender.cpp  EraseZeroesRender.h
Finder/: FinderController.cpp  FinderController.h  FinderModel.cpp  FinderModel.h  FinderRender.cpp  FinderRender.h
InsertLineMenu/: InsertLineMenuController.cpp  InsertLineMenuController.h  InsertLineMenuModel.cpp  InsertLineMenuModel.h  InsertLineMenuRender.cpp  InsertLineMenuRender.h
InsertLinesMenu/: InsertLinesMenuController.cpp  (+5 more)
(+17 files in other folders)
